--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,89 @@
-body {
+/* body {
     background-color:grey ;
 }
-h1 {
+h1, li {
     color: white;
 }
+h1 {
+    text-decoration-line: overline;
+    text-align: center;
+}
+div > h2 {
+    text-decoration: blueviolet;
+}
+h1:hover {
+    background-color: tomato;
+    cursor: pointer;
+}
 li {
+    list-style-type:none;
+}
+.cambio:hover {
+    cursor: pointer;
+}
+.color-aquamarine {
+    color: yellow;
+}
+a:active {
+    color: red;
+}
+/* Primer hijo de div, tienen que aparecer en azul */
+/* div:first-child { 
+    color: blue;
+    } */
+
+/* div:nth-child(){
+    color: red;
+} */
+/* a {
+ text-decoration:none;
+}
+.caja {
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    background-color: tomato;
+    border-radius: 50%; */
+    
+
+/* .seccion-caja {
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
+    background-color: tomato;
+    
+} */
+/* .cuadrado {
+    background-color: yellow;
+}
+
+.ejemplo {
+    font-size: 0.5em;
+} */
+
+.elemento {
+    width: 50px;
+    height: 50px;
+    background-color:grey;
+    border: 1px black solid;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    justify-content: center;
+
+}
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-between;
+}
+.circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background-color: tomato;
+    border: 1px solid black;
 }
